Update for Patch v3.12.4 - checksum: f4eb

--- a/mod/thmod/localisation/english/ancient_relics_events_l_english.yml
+++ b/mod/thmod/localisation/english/ancient_relics_events_l_english.yml
@@ -1122,10 +1122,11 @@
  ancrel.12090.A:0 "We can integrate the world into our own operating system."
  ancrel.12090.B:0 "Let them continue - we can siphon off their readings."
  ancrel.12090.C:0 "Distribute the drones to our planets."
- ancrel.12090.C.tooltip:0 "§Y80§! Robot £pop£ Pops will be distributed to our planets."
+ ancrel.12090.C.machine.tooltip:0 "§Y80§! £pops£ Machine Pops will be distributed to our planets."
+ ancrel.12090.C.mechanical.tooltip:0 "§Y80§! £pops£ Mechanical Pops will be distributed to our planets."
  ancrel.12090.D:0 "But this is just an enormous alloy mine!"
  ancrel.12090.E:0 "A well-organized network such as this could serve us well."
- ancrel.12090.E.tooltip:0 "The §Y[From.Planet.System.GetName]§! system will be placed under the control of a §YMachine Intelligence§! that will be our subject. Their capital, §Y[From.Planet.GetName]§!, will be a §YMachine World§! with 80 £pop£ pops."
+ ancrel.12090.E.tooltip:0 "The §Y[From.Planet.System.GetName]§! system will be placed under the control of a §YMachine Intelligence§! that will be our subject. Their capital, §Y[From.Planet.GetName]§!, will be a §YMachine World§! with 80 £pop£ Machine Pops."
  ancrel.12095.desc:0 ""You inconsiderate-"\n\n§BThe transmission feed is garbled for a time, and no sense can be made of the noises heard.§!\n\n"Did you never consider that someone might be watching that signal feed you so carelessly cut off? Well, since you have proven yourselves to be dangerously aggressive vermin... it's time to call the §RPEST CONTROL§!. Prepare to face your doom.""
  ancrel.12095.A:0 "We will survive."
  ancrel.12095.B:0 "Cut the transmission."
