--- a/mod/thmod/localisation/english/astral_planes_l_english.yml
+++ b/mod/thmod/localisation/english/astral_planes_l_english.yml
@@ -346,12 +346,14 @@
  gov_defensive_union: "Defensive Union"
  gov_defensive_union_desc: "This government unites its people in the common cause of protection against external threats."
  RT_DEFENSIVE_UNION: "High Shield"
+ HT_DEFENSIVE_UNION: "Guardian"
  Guardianship: "Guardianship"
  Protectorate: "Protectorate"
  Stalwart_Legion: "Stalwart Legion"
  gov_dimensional_covenant: "พันธสัญญามิติ"
  gov_dimensional_covenant_desc: "This society is underpinned by a deep spiritual consciousness. Strict moral codes are in place to ensure the highest percentage of its people can confidently look forward to the afterlife."
  RT_DIMENSIONAL_COVENANT: "First Ascendant"
+ HT_DIMENSIONAL_COVENANT: "Second Ascendant"
  Church_of_Otherworlds: "Church of Otherworlds"
  Astral_Fellowship: "Astral Fellowship"
  Dimensional_Commune: "คอมมูนมิติ"
