--- a/mod/thmod/localisation/english/distant_stars_l_english.yml
+++ b/mod/thmod/localisation/english/distant_stars_l_english.yml
@@ -137,16 +137,16 @@
  distar.20.desc:0 "Investigation of the unrecognized fleet signatures in the [From.GetName] system revealed an unexpected discovery. The fleet is not, in fact, in safe orbit of the black hole, but rather crossing its event horizon.\n\nScience Officer [Root.GetLeaderName] conjectures that the fleet approached [From.GetName]'s event horizon centuries ago, whereupon time dilation left their image detectable on its surface.\n\nWhether the fleet's actions were intentional, or the result of some unhappy accident, we may never know. Their signatures match no known civilization on record."
  distar.25.name:0 "Rudimentary Robots"
  distar.25.desc:0 "In studying the surface of [From.GetName], the crew of the [Root.GetName] discovered the ruins of an early space age civilization. Though no living members of this civilization remain, the planet is still inhabited by the rudimentary robots they constructed.\n\nThese robots still go about their tasks, tirelessly repairing the crumbling infrastructure of their long-dead makers.\n\nAny future colonists may be able to make use of this ancient robotic workforce. If nothing else, they've certainly proved themselves resilient."
- distar.25.a.tooltip:0 "§B3 £pops£ Robot Pops§! have been found on [From.GetName]"
- distar.25.b.tooltip:0 "§B4 £pops£ Robot Pops§! have been found on [From.GetName]"
+ distar.25.a.tooltip:0 "§B3 £pops£ Mechanical Pops§! have been found on [From.GetName]"
+ distar.25.b.tooltip:0 "§B4 £pops£ Mechanical Pops§! have been found on [From.GetName]"
  distar.26.name:0 "Rudimentary Robots"
  distar.26.desc:0 "Our colonists on [Root.GetName] will need to deal with the ancient robots on its surface, who we presume were left behind when whatever fate befell their makers spared them.\n\nMany of these antiquated automatons have responded to our presence, making repetitive queries in an alien tongue. We believe they are awaiting input. They do not appear to be sentient, and it is likely they lack higher reasoning functions."
  distar.26.a:0 "Put them to work."
- distar.26.a.tooltip:0 "Gain §B£pops£ Robot Pops§! on [Root.GetName]."
+ distar.26.a.tooltip:0 "Gain §B£pops£ Mechanical Pops§! on [Root.GetName]."
  distar.26.b:0 "Scrap them for minerals."
  distar.26.c:0 "Our policies prohibit the use of AIs for a reason."
  distar.26.d:0 "We have no need of them, but it would be remiss to destroy them."
- distar.26.d.tooltip:0 "Displace the §B£pops£ Robot Pops§! on [Root.GetName]."
+ distar.26.d.tooltip:0 "Displace the §B£pops£ Mechanical Pops§! on [Root.GetName]."
  distar.26.spir:0 "We cannot coexist with the soulless."
  distar.26.mach:0 "They shall be integrated."
  distar.27.name:0 "Missing Makers"
