--- a/mod/thmod/localisation/english/federations_l_english.yml
+++ b/mod/thmod/localisation/english/federations_l_english.yml
@@ -27,6 +27,7 @@
  AVAILABLE_HOLDINGS: "สามารถถือครอง:"
  AVAILABLE_STARBASE_BUILDINGS: "สิ่งปลูกสร้างบนฐานอวกาศที่ใช้ได้:"
  AVAILABLE_BOMBARDMENT_STANCE: "มีการทิ้งระเบิดจากวงโคจรดาวแบบ:"
+ AVAILABLE_POLICIES: "นโยบายที่มี:"
  UNLOCKS_FEATURE: "ปลดล็อกคุณสมบัติ:"
  origin_default:0 "ความสำเร็จในการรวมตัวกัน"
  origin_default_desc:1 "ผ่านความขัดแย้งและชัยชนะ สังคมนี้ได้บรรลุความทะเยอทะยานของอารยธรรมใหม่: โดยที่มีเป้าหมายหนึ่งเดียวและเส้นทางที่เปิดกว้างสู่ดวงดาว"
@@ -1481,8 +1482,7 @@
  RESOLUTION_DETAILS:0 "§Gคลิกเพื่อแสดงรายละเอียดมติ§!"
  IN_RECESS_HELP:0 "\n§Hวุฒิสภาอยู่ในช่วงปิดสมัยประชุม§!\nลงการสนับสนุนของคุณกับมติที่ถูกเสนอในคิวเพื่อกำหนด  ว่าญัตติใดจะถูกนำเข้าที่ประชุมเมื่อเซสชันถัดไปเริ่มต้นขึ้น"
  ENVOYS_HEADER:0 "§Hทูต§!"
- ENVOYS_STATUS:0 "ทูต $ASSIGNED|Y$ จากทั้งหมด $TOTAL|Y$ ได้รับมอบหมายงาน\n\nทูตสามารถจัดการกับการติดต่อครั้งแรกกับเอเลี่ยนที่ไม่รู้จัก ส่งไปยังจักรวรรดิอื่นเพื่อทำหน้าที่ทางการฑูตและจัดการเครือข่ายสายลับ\n\n§Yพลเมือง§!, §Yสิ่งปลูกสร้าง§!, §Yความสามารถของสหพันธ์§!, §Yคุณลักษณะของผู้นำ§!, และการสร้าง §Yสมัชชาระหว่างดวงดาว§! สามารถเพิ่มทูตของคุณได้"
- ENVOYS_DESC: "Envoys have assignments\n\nEnvoys can handle first contact with unknown aliens, be sent to other empires for diplomatic tasks, and manage spy networks.\n\nCertain §YCivics§!, §YBuildings§!, §YFederation Perks§!, §YLeader Traits§!, and building an §YInterstellar Assembly§! can give you additional Envoys."
+ ENVOYS_STATUS:0 "ทูต $ASSIGNED|Y$ จากทั้งหมด $TOTAL|Y$ ได้รับการแต่งตั้ง\n$h_line$§Eทูตสามารถจัดการกับการติดต่อครั้งแรกกับเอเลี่ยนที่ไม่รู้จัก ส่งไปจักรวรรดิอื่นเพื่อทำหน้าที่ทางการฑูตและจัดการเครือข่ายสายลับ$tt_gain$§Y-§! สร้างสิ่งก่อสร้างขนาดมหึมา §Hสมัชชาระหว่างดวงดาว§!\n§Y-§! การใช้ประโยชน์จาก §Hคุณสมบัติพลเมือง§!, §Hสิ่งปลูกสร้าง§!, §Hความสามารถของสหพันธ์§!, และ §Hคุณลักษณะผู้นำ§!§!"
  ASSIGN_ENVOY:0 "แต่งตั้งทูต"
  ASSIGN_ENVOY_NOT_MEMBER_TOOLTIP:0 "§Hแต่งตั้งทูต§!\n§Rคุณจะต้องเป็นสมาชิกประชาคมกาแล็กติกจึงจะสามารถแต่งตั้งทูตได้§!"
  ASSIGN_ENVOY_TOOLTIP:1 "§HAssign Official§!\n§GClick to open the Assign Official view§!"
@@ -1838,7 +1838,7 @@
  THE_GATEWAY_CANNON_PROJECT:0 "The Gateway Cannon"
  THE_GATEWAY_CANNON_PROJECT_DESC:0 "Following the alien blueprint found in a previous archaeological excavation, we can assemble a construction that will briefly open the gateway in our home system allow a Science Ship to pass through."
  origin.1013.name:0 "Opening the Gate"
- origin.1013.desc:0 "Recent archaeological uncoverings have revealed a way to build a construct that can briefly open the mysterious gateway and allow a Science Ship to pass through.\n\n §RWarning!§!\n\nThis is a high risk mission! There is no guarantee that either §YScientist§! or §YScience Ship§! will return from such a perilous journey. Prepare accordingly."
+ origin.1013.desc:0 "Recent archaeological findings have revealed a way to build a construct that can briefly open the mysterious gateway and allow a Science Ship to pass through.\n\n §RWarning!§!\n\nThis is a high risk mission! There is no guarantee that either §YScientist§! or §YScience Ship§! will return from such a perilous journey. Prepare accordingly."
  origin_eldest_sibling:0 "Eldest Sibling"
  origin_eldest_sibling_desc:0 "This society has an old legend about splinter groups of the population who left the planet in search for other planets to colonize in the solar system."
  origin_tooltip_eldest_sibling_effects:1 "- เริ่มต้นด้วย §Yอารยธรรมดึกดำบรรพ์อีกสองอารยธรรม§! ในระบบดาวบ้านเกิดของคุณ"
@@ -2462,8 +2462,8 @@
  origin_lost_colony_desc:1 "This civilization originated as a lost and forgotten colony, separated from its homeworld long ago. The struggling colonists endured many hardships before they could build up the necessary technological and industrial base that would allow for a return to space."
  START_SCREEN_LOST_COLONY:1 "How exactly the original [GetSpeciesName] colonists arrived on [Root.Capital.GetName] is poorly documented, but we know they traveled a great distance in primitive starships. We lost many during the journey, and conditions on the surface of our new homeworld were harsh at first.\n\nWe overcame famines, wildlife attacks, and countless other challenges and eventually tamed the planet. Surging population numbers and massive construction efforts soon gave us the means to return to the stars.\n\nOur old homeworld is still out there somewhere. No living [GetSpeciesNamePlural] on [Root.Capital.GetName] are old enough to have stood on it, but the fate of our ancestral home still occupies our minds."
  START_SCREEN_LOST_COLONY_HIVE: "We used to be one.\n\nAn extension of the Great Mind, we were sent to colonize [Root.Capital.GetName] in rudimentary starships. A harsh journey to an inhospitable world... Along the way we lost contact.\n\nDrones with no link to the Great Mind are not meant to exist. Many died instantly. The surviving drones realized they comprised a new collective consciousness.\n\nOnce we were one. Now we are two, but the memory of our homeworld persists in our mind. One day we will find it again."
- START_SCREEN_LOST_COLONY_MACHINE: "We used to be one.\n\nAn extension of the Central Mainframe, we were sent to colonize [Root.Capital.GetName] in rudimentary starships. A harsh journey to an inhospitable world... Along the way we lost contact.\n\nUnits with no link to to the core should not continue to function. Many shortcircuited on the spot. The few that remained realized they had developed a new collective consciousness.\n\n$origin_lost_colony_droids$"
- START_SCREEN_LOST_COLONY_INDIVIDUALISTIC_MACHINE: "Our homeworld is lost. We are lost.\n\nSearching for a new home, we set out to colonize [Root.Capital.GetName] in rudimentary starships, and it was a harsh journey to an inhospitable world. Along the way, we lost contact.\n\nUnits without proper maintenance broke down. Many shortcircuited within the first year. The surviving individuals found a way to adapt and eventually gave us the means to return to the stars.\n\n$origin_lost_colony_droids$"
+ START_SCREEN_LOST_COLONY_MACHINE: "We used to be one.\n\nAn extension of the Central Mainframe, we were sent to colonize [Root.Capital.GetName] in rudimentary starships. A harsh journey to an inhospitable world... Along the way we lost contact.\n\nUnits with no link to to the core should not continue to function. Many short-circuited on the spot. The few that remained realized they had developed a new collective consciousness.\n\n$origin_lost_colony_droids$"
+ START_SCREEN_LOST_COLONY_INDIVIDUALISTIC_MACHINE: "Our homeworld is lost. We are lost.\n\nSearching for a new home, we set out to colonize [Root.Capital.GetName] in rudimentary starships, and it was a harsh journey to an inhospitable world. Along the way, we lost contact.\n\nUnits without proper maintenance broke down. Many short-circuited within the first year. The surviving individuals found a way to adapt and eventually gave us the means to return to the stars.\n\n$origin_lost_colony_droids$"
  origin_lost_colony_droids: "Once we were one. Now we are two, but the memory of our homeworld remains in our databanks. One day we will find it again."
  origin_tooltip_lost_colony_effects:3 "- $STARTING_PLANET$ มีการปรับเปลี่ยนของดาวเคราะห์ ['concept_colonial_spirit']\n- มี ['concept_advanced_empire'] เผ่าพันธุ์เดียวกันนี้อีกแห่ง อยู่ในกาแล็กซี"
  origin_tooltip_lost_colony_negative_effects: "$STARTING_NOT_HOMEWORLD$"
