--- a/mod/thmod/localisation/english/machine_age_situations_1_l_english.yml
+++ b/mod/thmod/localisation/english/machine_age_situations_1_l_english.yml
@@ -242,8 +242,8 @@
  cyber.160.e: "Block all news coverage."
  cyber.200.name: "Augmentation Centers"
  cyber.200.desc.gov: "After a period of political infighting, the responsibilities for producing cybernetic augmentations have been divided between various governmental departments. When everyone gets a piece of the pie, they will surely keep each other in check.\n\nBut plans must be put into action. The research community requires at least one $building_augmentation_center$ to act as a hub for cybernetic development."
- cyber.200.desc.cor: "What was once a dream is now within reach, and who better to profit from it than the multitude of corporations within our borders? A benefit of the burgeoning cybernetic industry vigor is that new consumer products can be launched at an accelerated pace.\n\nBut plans must be put into action. The research community requires at least one $building_upload_center$ to act as a hub for cybernetic development."
- cyber.200.desc.ind: "Our communication networks are abuzz with wild design ideas, everything from neuro-synaptic augmentation to cybernetic taste glands. Most of these would be highly impractical and very expensive to implement, but some designs appear promising.\n\nBut plans must be put into action. The online community requires at least one $building_augmentation_center$ to act as a hub for cybernetic development."
+ cyber.200.desc.cor: "What was once a dream is now within reach, and who better to profit from it than the multitude of corporations within our borders? A benefit of the burgeoning cybernetic industry vigor is that new consumer products can be launched at an accelerated pace.\n\nBut plans must be put into action. The corporate lobbyists request at least one $building_upload_center$ to act as a hub for cybernetic development."
+ cyber.200.desc.ind: "Our communication networks are abuzz with wild design ideas, everything from neuro-synaptic augmentation to cybernetic taste glands. Most of these would be highly impractical and very expensive to implement, though luckily some designs appear promising.\n\nBut plans must be put into action. The online community requires at least one $building_augmentation_center$ to act as a hub for cybernetic development."
  cyber.200.a.gov: "Approve the building permits."
  cyber.200.a.cor: "Approved."
  cyber.200.a.ind: "Granted."
@@ -456,9 +456,9 @@
  rulerchip_intergenerational_knowledge: "Intergenerational Knowledge"
  rulerchip_intergenerational_knowledge_desc: "Our ruler is diving into the §Y$r_the_rulerchip$§! memory core to improve their knowledge base."
  rulerchip_intergenerational_knowledge_tooltip: "Ruler Experience Gain: §G+50%§!"
- rulerchip_intergenerational_knowledge_science_tooltip: "§EFor each previous §Y$scientist_with_icon$§! Ruler:$NEW_LINE$§Y$MOD_COUNTRY_ALL_TECH_RESEARCH_SPEED$:§! §G+5%§! (up to §G+25%§!)\nCurrent Effects:§!"
- rulerchip_intergenerational_knowledge_military_tooltip: "\n\n§EFor each previous §Y$commander_with_icon$§! Ruler:$NEW_LINE$§Y$MOD_SHIP_WEAPON_DAMAGE$:§! §G+5%§! (up to §G+25%§!)\nCurrent Effects:§!"
- rulerchip_intergenerational_knowledge_admin_tooltip: "\n\n§EFor each previous §Y$official_with_icon$§! Ruler:$NEW_LINE$§Y$mod_planet_jobs_produces_mult$:§! §G+5%§! (up to §G+25%§!)\nCurrent Effects:§!"
+ rulerchip_intergenerational_knowledge_science_tooltip: "\n§EFor each previous §Y$scientist_with_icon$§! Ruler:$NEW_LINE$§Y$MOD_COUNTRY_ALL_TECH_RESEARCH_SPEED$:§! §G+5%§! (up to §G+25%§!)\nCurrent Effects:§!"
+ rulerchip_intergenerational_knowledge_military_tooltip: "\n§EFor each previous §Y$commander_with_icon$§! Ruler:$NEW_LINE$§Y$MOD_SHIP_WEAPON_DAMAGE$:§! §G+5%§! (up to §G+25%§!)\nCurrent Effects:§!"
+ rulerchip_intergenerational_knowledge_admin_tooltip: "\n§EFor each previous §Y$official_with_icon$§! Ruler:$NEW_LINE$§Y$mod_planet_jobs_produces_mult$:§! §G+5%§! (up to §G+25%§!)\nCurrent Effects:§!"
  MESSAGE_RULERCHIP_LEADER_DEATH_TITLE: "Knowledge Preserved"
  MESSAGE_RULERCHIP_LEADER_DEATH_DESC: "We have preserved [From.GetName]'s knowledge in §Y$r_the_rulerchip$§!."
  mod_councilor_ruler_imperial_exp_gain: "Ruler Experience Gain"
@@ -538,7 +538,7 @@
  cyber.505.name: "Future Shock"
  cyber.505.desc.gov: "The augmentation of our people has been a triumph of streamlined manufacturing processes and decision-making. Our multitude of distinct voices have been acknowledged with their concerns addressed. Now, every single §Y[root.GetSpeciesAdj]§! has equal opportunity to benefit from these life-altering implants.\n\nThe logical next step is to examine the wider implications of this technology. Are we to leverage it for the democratic process or elevate our workers via experience synchronization?"
  cyber.505.desc.cor: "The augmentation process with our partnered corporations has been successfully completed. Implants have been manufactured, distributed, and installed with staggering efficiency. The many voices of §Y[root.GetSpeciesAdj]§! society have been heard, and their legitimate concerns have been dealt with. We are ready to face the future with renewed vigor.\n\nThe government is now prepared to take its own next step. We can use our technological advances to improve the democratic process or synchronize implants in the service of workers."
- cyber.505.desc.ind: "Despite some apprehension from government officials, the decentralized distribution model of the implants has worked. Small clinics and services are popping up on every street corner and §Y[root.GetSpeciesAdj]§! are able to augment themselves without having to travel great distances.\n\nOur government must be ready to move on as well. We can either use the implants to strengthen our democratic process or use them to synchronize our experiences for the benefits of ourselves and the workers."
+ cyber.505.desc.ind: "Despite some apprehension from government officials, the decentralized distribution model of the implants has worked. Small clinics and services are popping up on every street corner allowing anyone to augment themselves without having to travel great distances.\n\nOur government must be ready to move on as well. We can either use the implants to strengthen our democratic process or use them to synchronize our experiences for the benefits of ourselves and the workers."
  cyber.505.a: "We should enhance the democratic process."
  cyber.505.a.tt: "Emphasis on increased happiness, unity and specialists."
  cyber.505.b: "We must link our minds."
@@ -600,18 +600,18 @@
  cyber.655.name: "Unforeseeable Mechanical Failure"
  cyber.655.desc: "Our cyberware engineers have come to us with an economic opportunity. With only a slight reduction of implant durability, we could generate a substantial increase in profits as users will have to replace essential parts.\n\nBy using an inferior bio-alloy in the sections experiencing most of the usual wear and tear the implants should fail in a manner that minimizes harm to the consumer, but require replacement."
  cyber.655.a: "Outrageous!"
- cyber.655.a.tt: "We will not provide our citizen with low-grade components!\n\n"
+ cyber.655.a.tt: "We will not provide our citizens with low-grade components!\n\n"
  cyber.655.b: "Intriguing. Start making flimsier cyberware."
  cyber.655.c: "Yes! Coordinate it with a price hike as well."
  cyber.655.d: "Use this data to improve our cyberization efforts."
  worse_parts: "Worse Parts"
- worse_parts_desc: "We have intentionally chosen to supply our citizen with inferior cybernetic components meaning that they have to buy replacements more often."
+ worse_parts_desc: "We have intentionally chosen to supply our citizens with inferior cybernetic components meaning that they have to buy replacements more often."
  worse_parts_effect_tt: "$r_trade_value$ from §Y£pop£ Pops§! with the §Y$trait_auto_mod_cyborg$§! trait: §G+0.5§!"
  optimized_parts: "Optimized Parts"
  optimized_parts_desc: "We have kept innovating and improving on our cybernetic components leading to a quicker and simpler install process."
  optimized_parts_effect_tt: "$r_energy$ Upkeep for §Y£pop£ Pops§! with the §Y$trait_auto_mod_cyborg$§! trait: §R+0.1§!"
  cyber.660.name: "Unforeseeable Societal Failure"
- cyber.660.desc: "It seems that our citizen have discovered our obsolescence initiative.\n\nThe streets are filled with [Owner.GetSpeciesNamePlural] who are outraged at the recent changes we have made to cyberware quality and cost. They are clamoring for us to revert these changes."
+ cyber.660.desc: "It seems that our citizens have discovered our obsolescence initiative.\n\nThe streets are filled with [Owner.GetSpeciesNamePlural] who are outraged at the recent changes we have made to cyberware quality and cost. They are clamoring for us to revert these changes."
  cyber.660.a: "Alright, it was a little too greedy."
  cyber.660.b: "Say what? WE CANNOT HEAR YOU!"
  cyber.660.c: "We wont have to..."
@@ -725,7 +725,7 @@
  cyber.1015.b: "Our digital skies are enough."
  cyber.1015.c: "Let our people see free again!"
  sold_sky_1: "Digital Billboards"
- sold_sky_1_desc: "Selling the virtual attention of our citizen was a great decision!"
+ sold_sky_1_desc: "Selling the virtual attention of our citizens was a great decision!"
  sold_sky_1_mega: "$sold_sky_1$"
  sold_sky_1_mega_desc: "$sold_sky_1_desc$"
  sold_sky_2: "Planetary Billboards"
