--- a/mod/thmod/localisation/english/machine_age_situations_2_l_english.yml
+++ b/mod/thmod/localisation/english/machine_age_situations_2_l_english.yml
@@ -148,28 +148,27 @@
  computation_core_production_name: "Production Streamlining"
  computation_core_production: "$computation_core_production_name$"
  computation_core_production_desc: "Utilize spare processing cycles to streamline production processes.$computation_core_production_tt$"
- computation_core_trade: "instead of providing §G+1%§! $r_trade_value$"
- computation_core_production_tt: "\n\n$EFFECTS_HEADER$ $NEW_LINE$- Each £job_clerk£ $job_clerk$ increases $r_alloys$ §Yfrom Jobs§! by §G+0.5% §!$computation_core_trade$"
+ computation_core_production_tt: "\n\n$EFFECTS_HEADER$ $NEW_LINE$- Each £job_clerk£ $job_clerk$ increases $r_alloys$ and $r_consumer_goods$ §Yfrom Jobs§! by §G+0.5%"
  computation_core_stability_name: "Stability Analysis"
  computation_core_stability: "$computation_core_stability_name$"
  computation_core_stability_desc: "Allocate resources for monitoring societal information flow for irregularities.$computation_core_stability_tt$"
- computation_core_stability_tt: "\n\n$EFFECTS_HEADER$ $NEW_LINE$- Each £job_clerk£ $job_clerk$ increases §Y$r_unity$ from Jobs§! by §G+0.5%§! $computation_core_trade$"
+ computation_core_stability_tt: "\n\n$EFFECTS_HEADER$ $NEW_LINE$- Each £job_clerk£ $job_clerk$ increases §Y$r_unity$ from Jobs§! by §G+0.5%§!"
  computation_core_research_name: "Research Processes"
  computation_core_research: "$computation_core_research_name$"
  computation_core_research_desc: "Designate additional processing cycles to performance intensive research servers.$computation_core_research_tt$"
- computation_core_research_tt: "\n\n$EFFECTS_HEADER$ $NEW_LINE$- Each £job_clerk£ $job_clerk$ increases §Y$r_research$ from Jobs§! by §G+0.5%§! $computation_core_trade$"
+ computation_core_research_tt: "\n\n$EFFECTS_HEADER$ $NEW_LINE$- Each £job_clerk£ $job_clerk$ increases §Y$r_research$ from Jobs§! by §G+0.5%§!"
  tech_identity_copy: "การทำสำเนาตัวตน"
  tech_identity_copy_desc: "We will be able to copy the identity and memories of a Synthetic into a new mechanical body. The copies have predictable skill sets but make for stale conversation."
  TECH_UNLOCK_IDENTITY_COPY_TITLE: "สามารถเข้าถึงนโยบาย:$TABBED_NEW_LINE$§H$policy_synthetic_identities_policy$§! - $identity_copy_name$"
- TECH_UNLOCK_IDENTITY_COPY_DESC: "§H$mechanical_pops$§!$TABBED_NEW_LINE$Happiness: §R-5%§!"
+ TECH_UNLOCK_IDENTITY_COPY_DESC: "§H£pops£ Mechanical Pops§!$TABBED_NEW_LINE$Happiness: §R-5%§!"
  tech_identity_fusion: "การหลอมรวมตัวตน"
  tech_identity_fusion_desc: "Merging the identities and memories of two or more Synthetics into a mechanical body will create new, somewhat unique individuals."
  TECH_UNLOCK_IDENTITY_FUSION_TITLE: "สามารถเข้าถึงนโยบาย:$TABBED_NEW_LINE$§H$policy_synthetic_identities_policy$§! - $identity_fusion_name$"
- TECH_UNLOCK_IDENTITY_FUSION_DESC: "§H$mechanical_pops$§!$TABBED_NEW_LINE$Assembly Cost: §R+10%§!"
+ TECH_UNLOCK_IDENTITY_FUSION_DESC: "§H£pops£ Mechanical Pops§!$TABBED_NEW_LINE$Assembly Cost: §R+10%§!"
  tech_identity_initialization: "การเริ่มกระบวนการสร้างตัวตน"
  tech_identity_initialization_desc: "We will be able to initialize an identity kernel and provide it with a virtual childhood. While expensive, we can simulate the optimal experiences to generate productive personalities."
  TECH_UNLOCK_IDENTITY_INITIALIZATION_TITLE: "สามารถเข้าถึงนโยบาย:$TABBED_NEW_LINE$§H$policy_synthetic_identities_policy$§! - $identity_initialization_name$"
- TECH_UNLOCK_IDENTITY_INITIALIZATION_DESC: "§H$mechanical_pops$§!$TABBED_NEW_LINE$Happiness: §G+5%§!$TABBED_NEW_LINE$Resources from £pop£ Jobs: §G+5%§!$TABBED_NEW_LINE$Assembly Cost: §R+20%§!"
+ TECH_UNLOCK_IDENTITY_INITIALIZATION_DESC: "§H£pops£ Mechanical Pops§!$TABBED_NEW_LINE$Happiness: §G+5%§!$TABBED_NEW_LINE$Resources from £pop£ Jobs: §G+5%§!$TABBED_NEW_LINE$Assembly Cost: §R+20%§!"
  synth.100.name: "Booting Up"
  synth.100.desc: "The time has come to cast off our biological form, to ascend into alloy and electricity. With cutting-edge bodies and accelerated minds we will march into the future. The [Owner.Species.GetFleshTypeCyberCreed] is fallible, but a machine can be perfected.\n\nHowever, the transition will not be easy. The research community requires at least one $building_identity_complex$ to act as a hub for synthetic development. Our destiny awaits."
  synth.100.a: "We build our own fate."
@@ -288,7 +287,7 @@
  concept_auth_synth_democratic_virtual: "$auth_synth_democratic_virtual$"
  gov_synth_democracy_virtual: "$auth_synth_democratic_virtual$"
  gov_synth_democracy_virtual_desc: "$auth_synth_democratic_virtual_desc$"
- auth_cyber_oligarch_ruler_enforcers_tt: "Ruler Resource Output per £job_enforcer£ $job_enforcer$: §G+5%§!"
+ auth_cyber_oligarch_ruler_enforcers_tt: "Ruler Resource Output per £job_enforcer£ $job_enforcer$: §G+10%§!"
  auth_synth_oligarchic_physical: "Oligarchic Override"
  auth_synth_oligarchic_physical_desc: "Synthetic oligarchies authorize top-level bureaucrats to temporarily take over the bodies of their underperforming peers to prevent process management catastrophes."
  concept_auth_synth_oligarchic_physical: "$auth_synth_oligarchic_physical$"
@@ -323,13 +322,13 @@
  gov_synth_imperial_virtual_desc: "$auth_synth_imperial_virtual_desc$"
  auth_synth_corporate_physical: "Corporate Sapience"
  auth_synth_corporate_physical_desc: "Constrained synthetic minds can be imbued into inanimate objects to create rudimentary living entities. It can function as a tireless servant, loyal companion, or even a valued member of your family or business.\n\nCorporate governments are massive commercial enterprises that have wholly supplanted the state's role."
- auth_synth_corporate_physical_tt: "Access to policy: §Y$policy_computation_core_allocation$§!\nUnlocks branch office building: ['building:building_ai_emporium']"
+ auth_synth_corporate_physical_tt: "$AVAILABLE_POLICIES$ §Y$policy_computation_core_allocation$§!\n$AVAILABLE_HOLDINGS$ ['building:building_ai_emporium']"
  concept_auth_synth_corporate_physical: "$auth_synth_corporate_physical$"
  gov_synth_corporate_physical: "$auth_synth_corporate_physical$"
  gov_synth_corporate_physical_desc: "$auth_synth_corporate_physical_desc$"
  auth_synth_corporate_virtual: "Corporate Recollection"
  auth_synth_corporate_virtual_desc: "This corporation deals in buying memories, permanently erasing them from the client's brain. Vivid and intense recollections are worth more than mundane ones. The corporation then scans the data for useful intel before finally integrating it into synth mind creation process.\n\nCorporate governments are massive commercial enterprises that have wholly supplanted the state's role."
- auth_synth_corporate_virtual_tt: "Access to policy: §Y$policy_computation_core_allocation$§!\nUnlocks branch office building: ['building:building_clear_thought_clinic']"
+ auth_synth_corporate_virtual_tt: "$AVAILABLE_POLICIES$ §Y$policy_computation_core_allocation$§!\n$AVAILABLE_HOLDINGS$ ['building:building_clear_thought_clinic']"
  concept_auth_synth_corporate_virtual: "$auth_synth_corporate_virtual$"
  gov_synth_corporate_virtual: "$auth_synth_corporate_virtual$"
  gov_synth_corporate_virtual_desc: "$auth_synth_corporate_virtual_desc$"
@@ -354,7 +353,7 @@
  synth.510.b: "Study holistic virtual overseeing options."
  synth.510.b.tt: "Emphasis on edicts and empire size."
  synth.515.name: "$synthshock_chain_title$"
- synth.515.desc: "Complete synthesization of the population has proved a resounding success. Our organic past been left in the dust of history, but to charter a way forward, §Y[From.GetRulerTitle] [From.GetRulerName]§! requires both the unconditional obedience of our brightest minds, and a decision.\n\nImproving our synthetic bodies would allow individuals to control multiple hosts at one. Alternatively, we could forgo physical space entirely, manipulating public sentiment through a fully virtual environment."
+ synth.515.desc: "Complete synthesization of the population has proved a resounding success. Our organic past been left in the dust of history, but to charter a way forward, §Y[From.GetRulerTitle] [From.GetRulerName]§! requires both the unconditional obedience of our brightest minds, and a decision.\n\nImproving our synthetic bodies would allow individuals to control multiple hosts as one. Alternatively, we could forgo physical space entirely, manipulating public sentiment through a fully virtual environment."
  synth.515.a: "Focus on neuro-synched bodies."
  synth.515.a.tt: "Emphasis on workers and districts."
  synth.515.b: "Concentrate on virtual manipulation."
@@ -410,12 +409,13 @@
  synth.1030.b: "Exercise caution."
  synth.1030.c: "The elite should not be placed at risk."
  synth_virtual_trait: "\n[owner.species.GetNamePlural] Gain Trait: §Y$trait_robot_digital_1$§!\nLeaders have the §Y$leader_trait_synthetic$§! trait replaced with the §Y$leader_trait_virtual$§! trait"
+ synth_physical_traits: "\nUnlocks §YAdvanced§! Traits for Species Modification"
  synth.1505.name: "Synthesized Society"
  synth.1505.desc.physical: "It is not our intention to completely erase individuality. We can reap the benefits of synthesization without irrevocably losing our selves.\n\nWith this change, freedom of movement has never been more accessible. We can transport our consciousnesses to specialized bodies in great numbers, allowing people to live and work wherever they are most needed most."
  synth.1505.desc.virtual: "Our society has broken free of the physical world and looks to the future with a mixture of excitement and trepidation. We have transformed ourselves in ways we do not yet fully comprehend, but we embark on this momentous journey together.\n\nOur population can now interface with machines in ways that do not put our consciousness in jeopardy. It is a major milestone in how we navigate the perils of war or the uncaring void of space."
  synth.1505.desc.neutral: "Being hesitant amidst an incomprehensible change is understandable. Many are more worried about what they might lose rather than what they could gain. But we cannot stand idle in the crossroads, and so must lead our people onwards.\n\nThis could mean either creating a selection of specialized personal bodies for people to jump into at will, or fully embracing their synthesized form to endure rigors of space travel and warfare."
  synth.1505.a: "Facilitate moving between physical bodies."
- synth.1505.a.tt: "$change_auth_tt$ ['concept_auth_synth_democratic_physical']"
+ synth.1505.a.tt: "$change_auth_tt$ ['concept_auth_synth_democratic_physical'] $synth_physical_traits$"
  synth.1505.b: "Use surrogates to fight for us."
  synth.1505.b.tt: "$change_auth_tt$ ['concept_auth_synth_democratic_virtual'] $synth_virtual_trait$"
  synth.1505.c: "$synth_keep_auth_option$"
@@ -425,7 +425,7 @@
  synth.1510.desc.virtual: "We are now ready to take the next logical step in the synthesization revolution, the embrace of a fully virtual existence.\n\nTemporary bodies will carry out tasks in the physical world, but the majority of the population is willing to transition to a more immaterial state of being.\n\nThis will enable orders to be carried out quickly and efficiently, and with the far less governmental oversight."
  synth.1510.desc.neutral: "We have adapted all parts of society to synthetic life but data remains inconclusive on the benefits of further specialization.\n\nWe can either create identity backdoors which allow supervising officials to take over the bodies of ineffectual subordinates, or develop a networked virtual interface for them to oversee multiple government projects simultaneously without latency."
  synth.1510.a: "Allow officials to take over inefficient peers."
- synth.1510.a.tt: "$change_auth_tt$ ['concept_auth_synth_oligarchic_physical']"
+ synth.1510.a.tt: "$change_auth_tt$ ['concept_auth_synth_oligarchic_physical'] $synth_physical_traits$"
  synth.1510.b: "Embrace complete virtual oversight."
  synth.1510.b.tt: "$change_auth_tt$ ['concept_auth_synth_oligarchic_virtual'] $synth_virtual_trait$"
  synth.1510.c: "$synth_keep_auth_option$"
@@ -435,7 +435,7 @@
  synth.1515.desc.virtual: "The people are ready to cast off their physical forms in favor of a digital consciousness. They are willing to continue their existence in a fully virtual environment.\n\nHaving thus signed away their perception, we have complete freedom to manipulate their reality, enhancing positive sentiments toward the state. A population aligned with their leadership is the pillar of a strong nation."
  synth.1515.desc.neutral: "The §Y[root.GetSpeciesAdj]§! population remains undecided on what form our digitized consciousness should take. More conservative voices would have us remain deeply rooted in corporeal bodies, while others resent this "half measure" between old and new.\n\nIt falls upon us to make that choice. The physical focus would allow a single worker to control multiple bodies, while a virtual existence would enable societal control on an unprecedented scale."
  synth.1515.a: "Create neuro-synched worker bodies."
- synth.1515.a.tt: "$change_auth_tt$ ['concept_auth_synth_dictatorial_physical']"
+ synth.1515.a.tt: "$change_auth_tt$ ['concept_auth_synth_dictatorial_physical'] $synth_physical_traits$"
  synth.1515.b: "Manipulate popular opinion in virtual space."
  synth.1515.b.tt: "$change_auth_tt$ ['concept_auth_synth_dictatorial_virtual'] $synth_virtual_trait$"
  synth.1515.c: "$synth_keep_auth_option$"
@@ -455,7 +455,7 @@
  synth.1525.desc.virtual: "Our commitment to the virtual space has unlocked an entirely new product line based on memories. Our branch office technicians are able to extract them from willing subjects no matter their phenotype.\n\nThese imprints are then carefully examined by our espionage department, allowing us to gain a competitive edge over other empires on that front. Finally, the memories are incorporated into our synthetic mind creation processes for significant performance gains."
  synth.1525.desc.neutral: "Despite meticulous cost/benefit analysis, neither the physical or virtual specialization in the synthesization process is coming on top. We cannot, however, stand still at the edge of such opportunities and have to introduce one clear path for our stakeholders.\n\nA focus on the physical world grants us the ability to imbue inanimate objects with constrained AI to be sold as simplified version of new life. Investments in the virtual realm would allow us to commodify memories and thought patterns."
  synth.1525.a: "Distribute constrained AI entities."
- synth.1525.a.tt: "$change_auth_tt$ ['concept_auth_synth_corporate_physical']"
+ synth.1525.a.tt: "$change_auth_tt$ ['concept_auth_synth_corporate_physical'] $synth_physical_traits$"
  synth.1525.b: "Commodify people's memories."
  synth.1525.b.tt: "$change_auth_tt$ ['concept_auth_synth_corporate_virtual'] $synth_virtual_trait$"
  synth.1525.c: "$synth_keep_auth_option$"
