--- a/mod/thmod/localisation/english/machine_age_situations_3_l_english.yml
+++ b/mod/thmod/localisation/english/machine_age_situations_3_l_english.yml
@@ -113,11 +113,11 @@
  machine_age.4400.desc.individualist_machines: "After exploring every possible upgrade, our experts have presented three different options. Each has its own merits, but we only have the capacity to see one through to completion.\n\n$machine_age.4400.desc.shared$"
  machine_age.4400.desc.shared: "Allowing each [GetDronePersonPlural] to divide into nanites will permit us to combine into endless configurations. This would reduce any limitations our current avatars have when interacting with the material world.\n\nAlternatively, we can reinvest in our existing forms, supercharging the ways that we approach new environments.\n\nFinally, we may choose to leave the physical world behind, becoming one with our source code. We could simulate universes within universes in the time it takes to scan a single speck of space dust."
  machine_age.4400.a: "Reshape as nanomachines."
- machine_age.4400.a.tt: "Focus on the §Y$tradition_nanotech$§! tradition tree.\n\n§Y$nanite_replicator$§! Production: §G+200%§!"
+ machine_age.4400.a.tt: "§Y$nanite_replicator$§! Production: §G+200%§!\n\nFocus on the ['concept_tradition_nanotech'] tradition tree.\n\n§EThis Ascension Path focuses on subsuming planets into §YNanite Worlds§!, utilizing §Y£nanites£ $nanites$§! for production, and replacing fleets with §Y$nanite_swarmer_plural$§!.§!"
  machine_age.4400.b: "Invest in modular upgrades."
- machine_age.4400.b.tt: "Focus on the §Y$tradition_modularity$§! tradition tree.\n\n§Y$living_metal_vats$§! Production: §G+200%§!"
+ machine_age.4400.b.tt: "§Y$living_metal_vats$§! Production: §G+200%§!\n\nFocus on the ['concept_tradition_modularity'] tradition tree.\n\n§EThis Ascension Path focuses on §YAdvanced Species Traits§! and increased §YPop Assembly§!.§!"
  machine_age.4400.c: "Embrace the virtual world."
- machine_age.4400.c.tt: "Focus on the §Y$tradition_virtuality$§! tradition tree.\n\n§Y$virtual_power_plant$§! Production: §G+200%§!"
+ machine_age.4400.c.tt: "§Y$virtual_power_plant$§! Production: §G+200%§!\n\nFocus on the ['concept_tradition_virtuality'] tradition tree.\n\n§EThis Ascension Path focuses on high §YPop Resource Production§! while having very few §YColonies§!, and low §YEmpire Size§!.§!"
  machine_age.4490.name: "Designed for a Different Time"
  machine_age.4490.desc.nanotech: "As we come to understand the meaning of existence as a collection of adaptable nanites, the rigid frames of the past no longer serve us.\n\n$machine_age.4490.desc.shared$\n\nWe have also begun our first major experiment in semi-organic nanite transformations, the first results are expected to manifest soon."
  machine_age.4490.desc.modularity: "Having evolved to a modular form, the static frames of the past no longer hold meaning for us.\n\n$machine_age.4490.desc.shared$"
