--- a/mod/thmod/localisation/english/megacorp_l_english.yml
+++ b/mod/thmod/localisation/english/megacorp_l_english.yml
@@ -85,7 +85,7 @@
  BRANCH_OFFICE_TRADE_VALUE_CRIMINAL_SYNDICATE:0 "คูณด้วย $MULT$ เนื่องจากระดับของ £crime£ §Y$PLANET_CRIME_TITLE$§! บนดาว"
  EMPIRE_SIZE:2 "ขนาดจักรวรรดิ"
  EMPIRE_SIZE_VAL:1 "ขนาดจักรวรรดิ: §Y$VALUE$§!"
- EMPIRE_SIZE_DESC:2 "§E§H$EMPIRE_SIZE$§! เป็นหน่วยวัดการขยายอาณาเขตจักรวรรดิของคุณในรูปแบบของ §Hเขต§!, §Hระบบดาว§!, §Hอาณานิคม§! และ §Hประชากร§! ที่ควบคุม, การมี §H$EMPIRE_SIZE$§!สูง จะเป็นภาระต่อความสามารถในการบริหารจักรวรรดิของคุณ ทำให้เพิ่มค่าใช้จ่ายของ §Hเทคโนโลยี§!, §Hวัฒนธรรม§!, §Hประกาศคำสั่ง§! และ §Hการรณรงค์§!, และง่ายต่อการแทรกซึมในการจารกรรม§!"
+ EMPIRE_SIZE_DESC:2 "§E§H$EMPIRE_SIZE$§! เป็นหน่วยวัดการขยายอาณาเขตจักรวรรดิของคุณในรูปแบบของ §Hเขต§!, §Hระบบดาว§!, §Hอาณานิคม§! และ §Hประชากร§! ที่ควบคุม\n\nการมี §H$EMPIRE_SIZE$§!สูง จะเป็นภาระต่อความสามารถในการบริหารจักรวรรดิ ทำให้เพิ่มค่าใช้จ่ายของ §Hเทคโนโลยี§!, §Hวัฒนธรรม§!, §Hประกาศคำสั่ง§! และ §Hการรณรงค์§! อื่นๆ และนอกจากนี้ จักรวรรดิยังง่ายต่อการแทรกซึมเพื่อวัตถุประสงค์ในการจารกรรมอีกด้วย§!"
  EMPIRE_SIZE_TOTAL:1 "$EMPIRE_SIZE$ทั้งหมด: $VALUE|0Y$"
  EMPIRE_SIZE_FROM_DISTRICTS:0 "จาก $NUM|Y$ $DISTRICT_DISTRICTS$: $VALUE$"
  EMPIRE_SIZE_FROM_SYSTEMS:0 "จาก $NUM|Y$ $SYSTEM_SYSTEMS$: $VALUE$"
@@ -1146,7 +1146,8 @@
  job_roboticist_plural:0 "นักวิทยาการหุ่นยนต์"
  job_roboticist_plural_with_icon: "£job_roboticist£ $job_roboticist_plural$"
  job_roboticist_desc:1 "These technicians build robots, that the robots may build for the nation."
- job_roboticist_effect_desc:1 "£job_roboticist£ $job_roboticist_plural$ เปลี่ยน £alloys£ §Y$alloys$§! เป็น £pop£ §Yประชากรหุ่นยนต์§! (ใหม่)"
+ job_roboticist_effect_desc:1 "£job_roboticist£ $job_roboticist_plural$ เปลี่ยน £alloys£ §Y$alloys$§! เป็น £pops£ §Yประชากรจักรกล§! (ใหม่)"
+ job_roboticist_individual_machine_effect_desc: "£job_roboticist£ $job_roboticist_plural$ เปลี่ยน £alloys£ §Y$alloys$§! เป็น £pops£ §Yประชากรเครื่องจักร§! (ใหม่)"
  job_roboticist_cyborg_effect_desc:0 "£job_roboticist£ $job_roboticist_plural$ เปลี่ยน £alloys£ §Y$alloys$§! เป็น £pop£ §Yประชากรไซบอร์ก§! (ประชากรใหม่)"
  mod_job_roboticist_add:0 "งาน $job_roboticist$"
  mod_job_roboticist_per_pop:0 "§G+1§! อาชีพ $job_roboticist$ ต่อ $VALUE$ ประชากร"
@@ -1524,6 +1525,7 @@
  mod_planet_knights_produces_mult:1 "£job_knight_commander£ $job_knight_commander$ และผลผลิตของ £job_knight£ $job_knight_plural$"
  mod_planet_branch_offices_energy_produces_add:0 "£energy£ รายได้สำนักงานสาขา"
  mod_planet_bio_trophies_unity_produces_mult:0 "£unity£ $unity$ จาก $pop_cat_bio_trophy_plural$"
+ mod_planet_bio_trophies_unity_produces_add: "$mod_planet_bio_trophies_unity_produces_mult$"
  mod_planet_pops_organics_food_upkeep_mult:0 "ค่าบำรุงรักษาประชากรที่เป็นอาหาร"
  mod_planet_pops_organics_minerals_upkeep_mult:0 "ค่าบำรุงรักษาประชากรที่เป็นแร่"
  mod_planet_pops_organics_energy_upkeep_mult:0 "ค่าบำรุงรักษาประชากรที่เป็นพลังงาน"
@@ -2391,6 +2393,7 @@
  decision_expel_population_desc:1 "The overcrowded conditions on this world require drastic measures. A massive planet-wide lottery is held, and the "winners" are expelled - by force, if necessary."
  decision_expel_population_effects:3 "ขับไล่ประชากรออกจากดาวดวงนี้ §Yได้ถึง 10§! £pop£ ประชากร เพื่อลดความแออัด ประชากรที่ถูกขับไล่จะกลายเป็นผู้ลี้ภัยและอาจไปตั้งรกรากในจักรวรรดิอื่น"
  decision_expel_population_effects_short:0 "ขับไล่ประชากรออกจากดาวดวงนี้ได้ถึง §Y10§! £pop£ ประชากร เพื่อลดความแออัด\n\nลด £stability£ §Rเสถียรภาพ§! ลงชั่วคราว"
+ decision_expel_population_fail_tooltip: "$TRIGGER_FAIL$No valid £pop£ Pops to expel (cannot expel Rulers, Pre-Sapient or Mechanical Pops)."
  planet_population_expelled:0 "ประชากรถูกขับไล่"
  planet_population_expelled_desc:1 "As a drastic measure to reduce overcrowding, a large segment of this world's population was recently forcibly expelled."
  decision_divine_algorithm:0 "ใช้อัลกอริทึมศักดิ์สิทธิ์"
@@ -3702,10 +3705,10 @@
  triggered_opinion_galatron_holder:0 "Keepers of the Galatron"
  triggered_opinion_galatron_denier:0 "Wicked Thieves of the Galatron's Light"
  galatron_naval_cap1:0 "Expanded by the Galatron"
- triggered_opinion_of_interstellar_assembly_1:0 "$triggered_opinion_of_interstellar_assembly_4$"
- triggered_opinion_of_interstellar_assembly_2:0 "$triggered_opinion_of_interstellar_assembly_4$"
- triggered_opinion_of_interstellar_assembly_3:0 "$triggered_opinion_of_interstellar_assembly_4$"
- triggered_opinion_of_interstellar_assembly_4:0 "สมัชชาระหว่างดวงดาว"
+ triggered_opinion_of_interstellar_assembly_1:0 "$interstellar_assembly_1$"
+ triggered_opinion_of_interstellar_assembly_2:0 "$interstellar_assembly_2$"
+ triggered_opinion_of_interstellar_assembly_3:0 "$interstellar_assembly_3$"
+ triggered_opinion_of_interstellar_assembly_4:0 "$interstellar_assembly_4$"
  casus_belli_cb_galatron:1 "Galatron Access Denied"
  war_goal_wg_take_galatron:0 "ยึดครองกาลาตรอน"
  war_goal_wg_take_galatron_desc:0 "การมีวัตถุโบราณ 'กาลาตรอน' เป็นสิทธิของผู้มีปัญญาทั้งหลาย อารยธรรมที่จะปิดพรมแดนกับผู้อื่นนั้นไม่เหมาะสมกับ 'กาลาตรอน'"
