--- a/mod/thmod/localisation/english/modifiers_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_l_english.yml
@@ -491,6 +491,7 @@
  mod_planet_district_hab_mining_build_speed_mult:0 "ความเร็วในการสร้าง $district_hab_mining$"
  mod_planet_district_hab_cultural_build_speed_mult:0 "ความเร็วในการสร้าง $district_hab_cultural$"
  mod_planet_building_stronghold_build_speed_mult:0 "ความเร็วในการสร้าง $building_stronghold$"
+ mod_planet_district_machine_coordination_build_speed_mult: "ความเร็วในการสร้าง $district_machine_coordination$"
  MOD_PLANET_BUILD_UPKEEP_MULT:0 "ค่าบำรุงรักษาดาวเคราะห์"
  MOD_COUNTRY_NAVAL_CAP_ADD:0 "$NAVY_SIZE_TITLE$"
  MOD_COUNTRY_NAVAL_CAP_MULT:0 "$MOD_COUNTRY_NAVAL_CAP_ADD$"
@@ -1576,19 +1577,19 @@
  mod_IRASSIA_research_speed_mult:0 "$precursor_research_speed$"
  mod_CYBREX_research_speed_mult:0 "$precursor_research_speed$"
  per_neighbor_rival:0 "คู่แข่งเพื่อนบ้าน"
- species_trait_points_add:0 "แต้มการปรับเปลี่ยนยีน"
- mod_HUM_species_trait_points_add:0 "แต้มการปรับเปลี่ยนยีนมนุษย์"
- mod_MAM_species_trait_points_add:0 "แต้มการปรับเปลี่ยนยีนสิ่งมีชีวิตเลี้ยงลูกด้วยนม"
- mod_REP_species_trait_points_add:0 "แต้มการปรับเปลี่ยนยีนสิ่งมีชีวิตเลื้อยคลาน"
- mod_AVI_species_trait_points_add:0 "แต้มการปรับเปลี่ยนยีนนก"
- mod_ART_species_trait_points_add:0 "แต้มการปรับเปลี่ยนยีนสิ่งงมีชีวิตขาปล้อง"
- mod_MOL_species_trait_points_add:0 "แต้มการปรับเปลี่ยนยีนทาก"
- mod_FUN_species_trait_points_add:0 "แต้มการปรับเปลี่ยนยีนเห็ดรา"
- mod_PLANT_species_trait_points_add:0 "แต้มการปรับเปลี่ยนยีนสิ่งมีชีวิตประเภทพืช"
- mod_LITHOID_species_trait_points_add:0 "แต้มการปรับเปลี่ยนยีนสิ่งมีชีวิตประเภทหิน"
+ species_trait_points_add:0 "แต้มการปรับเปลี่ยนเผ่าพันธุ์"
+ mod_HUM_species_trait_points_add:0 "$species_trait_points_add$มนุษย์"
+ mod_MAM_species_trait_points_add:0 "$species_trait_points_add$สิ่งมีชีวิตเลี้ยงลูกด้วยนม"
+ mod_REP_species_trait_points_add:0 "$species_trait_points_add$สิ่งมีชีวิตเลื้อยคลาน"
+ mod_AVI_species_trait_points_add:0 "$species_trait_points_add$นก"
+ mod_ART_species_trait_points_add:0 "$species_trait_points_add$สิ่งมีชีวิตขาปล้อง"
+ mod_MOL_species_trait_points_add:0 "$species_trait_points_add$ทาก"
+ mod_FUN_species_trait_points_add:0 "$species_trait_points_add$เห็ดรา"
+ mod_PLANT_species_trait_points_add:0 "$species_trait_points_add$สิ่งมีชีวิตประเภทพืช"
+ mod_LITHOID_species_trait_points_add:0 "$species_trait_points_add$สิ่งมีชีวิตประเภทหิน"
  mod_ROBOT_species_trait_points_add:0 "แต้มปรับเปลี่ยนจักรกล (เครื่องจักร)"
  mod_MACHINE_species_trait_points_add:0 "แต้มการปรับเปลี่ยนเครื่องจักร"
- mod_BIOLOGICAL_species_trait_points_add:0 "$species_trait_points_add$"
+ mod_BIOLOGICAL_species_trait_points_add:0 "$species_trait_points_add$สิ่งมีชีวิต"
  mod_pc_machine_habitability:0 "การอยู่อาศัยได้ในดาวเครื่องจักร"
  mod_pc_hive_habitability:0 "การอยู่อาศัยได้ในโลกที่เป็นรัง"
  MOD_POSTFIX_PERCENT:1 "%"
@@ -1608,8 +1609,10 @@
  mod_AQUATIC_species_trait_picks_add:0 "$SPECIES_TRAIT_PICKS$ (มีชีวิตอยู่ใต้น้ำ)"
  MOD_COUNTRY_SENSOR_RANGE_ADD:0 "ระยะเซ็นเซอร์ของจักรวรรดิ"
  MOD_SHIP_SENSOR_RANGE_ADD:0 "ระยะของเซ็นเซอร์"
- MOD_GOVERNMENT_ELECTION_YEARS_ADD:0 "ปีระหว่างการเลือกตั้ง"
- MOD_GOVERNMENT_ELECTION_YEARS_MULT:0 "$MOD_GOVERNMENT_ELECTION_YEARS_ADD$"
+ MOD_ELECTION_TERM_YEARS_ADD: "ระยะเวลาการเลือกตั้ง (ปี)"
+ MOD_ELECTION_TERM_YEARS_MULT: "$MOD_ELECTION_TERM_YEARS_ADD$"
+ MOD_ELECTION_TERM_VARIANCE_ADD: "ความแปรปรวน(ผันแปร)ระยะเวลาการเลือกตั้ง (ปี)"
+ MOD_ELECTION_TERM_VARIANCE_MULT: "$MOD_ELECTION_TERM_VARIANCE_ADD$"
  MOD_COUNTRY_IMMIGRATION_PULL_ADD:0 "ดึงการอพยพย้ายเข้าจักรวรรดิ"
  MOD_COUNTRY_IMMIGRATION_PULL_MULT:0 "$MOD_COUNTRY_IMMIGRATION_PULL_ADD$"
  MOD_COUNTRY_EMIGRATION_PUSH_ADD:0 "ผลักดันการอพยพย้ายออกจักรวรรดิ"
@@ -1650,3 +1653,4 @@
  MOD_PHYSICS_TECH_COST_MULT: "Research Cost (£physics£ §YPhysics§!)"
  MOD_SOCIETY_TECH_COST_MULT: "Research Cost (£society£ §YSociety§!)"
  MOD_ENGINEERING_TECH_COST_MULT: "Research Cost (£engineering£ §YEngineering§!)"
+ mod_megastructure_dismantle_refund_mult: "ได้คืนค่าสิ่งก่อสร้างขนาดมหึมา"
