--- a/mod/thmod/localisation/english/paragon_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_l_english.yml
@@ -1213,11 +1213,11 @@
  council_agenda_agenda_gestalt_boost_cognitive_desc:1 "การวิเคราะห์และความเข้าใจที่มีอยู่จะต้องจัดลำดับความสำคัญ"
  agenda_gestalt_boost_cognitive_finish:0 "$council_agenda_agenda_gestalt_boost_cognitive_name$ $agenda_ref$"
  agenda_gestalt_boost_cognitive_finish_desc:0 "$council_agenda_agenda_gestalt_boost_cognitive_desc$"
- council_agenda_agenda_gestalt_boost_regulatory_name:0 "การทบทวนคำสั่ง"
+ council_agenda_agenda_gestalt_boost_regulatory_name:0 "การทบทวนกฎระเบียบ"
  council_agenda_agenda_gestalt_boost_regulatory_desc:1 "มาตรการป้องกันจะต้องได้รับการจัดลำดับความสำคัญ"
  agenda_gestalt_boost_regulatory_finish:0 "$council_agenda_agenda_gestalt_boost_regulatory_name$ $agenda_ref$"
  agenda_gestalt_boost_regulatory_finish_desc:0 "$council_agenda_agenda_gestalt_boost_regulatory_desc$"
- council_agenda_agenda_gestalt_boost_legion_name:0 "การทบทวนการขยาย"
+ council_agenda_agenda_gestalt_boost_legion_name:0 "การทบทวนกองทัพ"
  council_agenda_agenda_gestalt_boost_legion_desc:0 "การควบคุมขอบเขตอาณาเขตของเราในอวกาศจะต้องได้รับการจัดลำดับความสำคัญ"
  agenda_gestalt_boost_legion_finish:0 "$council_agenda_agenda_gestalt_boost_legion_name$ $agenda_ref$"
  agenda_gestalt_boost_legion_finish_desc:0 "$council_agenda_agenda_gestalt_boost_legion_desc$"
