--- a/mod/thmod/localisation/english/pop_factions_l_english.yml
+++ b/mod/thmod/localisation/english/pop_factions_l_english.yml
@@ -324,6 +324,9 @@
  TRADITIONALIST_FEDERATION_ANTI:0 "$research_federation$"
  TRADITIONALIST_FEDERATION_ANTI_NOT_RESEARCH:0 "$research_federation$"
  TRADITIONALIST_FEDERATION_ANTI_DESC:0 "Being a member of a $research_federation$ will displease the [Root.GetName]."
+ TRADITIONALIST_ELEVATED_CREED: "Elevated [Root.Owner.GetCyberCreed]"
+ TRADITIONALIST_NO_CREED: "Lack of Creed"
+ TRADITIONALIST_ELEVATED_CREED_DESC: "[Root.GetCyberCreed] are pleased by us fully embracing their teachings."
  TECHNOLOGIST_ROBOTS:0 "รักเครื่องจักร"
  TECHNOLOGIST_ROBOTS_DESC:0 "Maintaining a population of at least §Y6§! Robotic Pops will please the [Root.GetName]."
  TECHNOLOGIST_FEW_ROBOTS:0 "$TECHNOLOGIST_ROBOTS$"
