--- a/mod/thmod/localisation/english/traditions_l_english.yml
+++ b/mod/thmod/localisation/english/traditions_l_english.yml
@@ -853,7 +853,7 @@
  no_rev_engineering:1 "ปฏิบัติการ §Y$operation_steal_technology$§! จะล้มเหลวโดยอัตโนมัติเมื่อใช้กับพวกเรา\nจักรวรรดิอื่นจะไม่สามารถนำ §Yเศษซากยานรบ§! ของเราที่ถูกทำลาย ไปศึกษาวิจัยได้"
  allow_raiding:0 "ปลดล็อกการทิ้งระเบิดแบบ §Y$bombardment_raiding$§! ซึ่งจะช่วยให้เราสามารถลักพาตัวประชากรจากดาวเคราะห์ที่ถูกปิดล้อมและย้ายประชากรมาที่ดาวของเรา"
  ap_defender_of_the_galaxy_effect_opinion:2 "เพิ่ม £opinion£ §Yทัศนคติ§! ของจักรวรรดิที่สามารถทำกิจกรรมการฑูตแบบปกติได้ §G+200§!"
- ap_defender_of_the_galaxy_modifier_desc:0 "สร้างความเสียหายให้กับฝ่ายไครซิสตอนจบเกม: §G+50%§!\n\n$ap_defender_of_the_galaxy_effect_opinion$"
+ ap_defender_of_the_galaxy_modifier_desc:0 "สร้างความเสียหายให้กับฝ่ายไครซิสตอนจบเกม: §G+50%§!\n\n$ap_defender_of_the_galaxy_effect_opinion$\n\n§Rผู้ปกป้องกาแล็กซีไม่สามารถเลือกที่จะกลายเป็นไครซิสได้§!"
  ap_engineered_evolution:0 "วิวัฒนาการทางพันธุวิศวกรรม"
  ap_the_flesh_is_weak:0 "ร่างกายเป็นสิ่งที่อ่อนแอ"
  ap_synthetic_evolution:0 "วิวัฒนาการจักรกลสังเคราะห์"
@@ -885,7 +885,7 @@
  ap_synthetic_age:0 "ยุคจักรกลสังเคราะห์"
  ap_synthetic_age_desc:0 "ยุคของสิ่งมีชีวิตได้มาและผ่านไป อนาคตของกาแลคซีเป็นของเครื่องจักร นี่คือรุ่งอรุณแห่งยุคสังเคราะห์"
  synthetic_age_tooltip:1 "สามารถเข้าถึงวัฒนธรรม §Y$tradition_synthetics$§! ได้\n$UNLOCKS_AGENDA$ $council_agenda_agenda_synthetic_age_name$, ซึ่งจะให้เทคโนโลยีการดัดแปลงเครื่องจักรเป็นทางเลือกในการวิจัย"
- synthetic_age_tooltip_machine_age: "เริ่ม §Yสถานการณ์การเปลี่ยนแปลง§! ที่จะปลดล็อกวัฒนธรรม §Y$tradition_modularity$§!, §Y$tradition_virtuality$§! หรือ §Y$tradition_nanotech$§!\n$UNLOCKS_AGENDA$ $council_agenda_agenda_synthetic_age_name$, ซึ่งจะให้เทคโนโลยีปรับเปลี่ยนเครื่องจักรให้เป็นทางเลือกในการวิจัย"
+ synthetic_age_tooltip_machine_age: "เริ่ม §Yสถานการณ์: การเปลี่ยนผ่าน§! ที่จะปลดล็อกวัฒนธรรม §Y$tradition_modularity$§!, §Y$tradition_virtuality$§! หรือ §Y$tradition_nanotech$§!\n§Rต้องมีสล็อตวัฒนธรรมว่าง§!\n$UNLOCKS_AGENDA$ $council_agenda_agenda_synthetic_age_name$, ซึ่งจะให้เทคโนโลยีปรับเปลี่ยนเครื่องจักรให้เป็นทางเลือกในการวิจัย"
  ap_machine_worlds:0 "ดาวเครื่องจักร"
  ap_machine_worlds_desc:0 "เราจะสร้างดาวของเราให้เป็นภาพสะท้อนของตัวเราเองโดยแทนที่ความอ่อนแอของสิ่งมีชีวิตด้วยความสมบูรณ์แบบของโลหะที่ไม่เปลี่ยนรูป"
  ap_hive_worlds:0 "ดาวที่เป็นรัง"
