--- a/mod/thmod/localisation/english/triggers_effects_l_english.yml
+++ b/mod/thmod/localisation/english/triggers_effects_l_english.yml
@@ -1218,8 +1218,8 @@
  DISMANTLE_EFFECT:0 "The station is dismantled.\n"
  ACTIVATE_ADVISOR:0 "ที่ปรึกษา $COUNTRY|Y$ ถูกเพิ่ม"
  DEACTIVATE_ADVISOR:0 "ที่ปรึกษา $COUNTRY|Y$ ถูกลบ"
- BEGIN_EVENT_CHAIN_EFFECT:1 "Begins the $NAME$ Event Chain\n\n"
- END_EVENT_CHAIN_EFFECT:1 "Ends the $NAME$ Event Chain\n\n"
+ BEGIN_EVENT_CHAIN_EFFECT:1 "Begins the $NAME|Y$ Event Chain\n\n"
+ END_EVENT_CHAIN_EFFECT:1 "Ends the $NAME|Y$ Event Chain\n\n"
  SHIFT_ETHIC_EFFECT:0 "\n$COUNTRY|Y$ มีแนวโน้มหลักจริยธรรมไปทาง $ETHIC|Y$\n"
  CHANGE_BACKGROUND_ETHIC:0 "Change Leader Ethic to $ETHIC|Y$"
  SET_COUNCIL_POSITION_EFFECT:0 "กำหนดผู้นำให้กับสภาในตำแหน่ง $POSITION|Y$"
