--- a/mod/thmod/localisation/english/modifiers_3_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_3_l_english.yml
@@ -126,11 +126,11 @@
  stratovents: "Stratospheric Vents"
  stratovents_desc: "Towering mineral structures that send gases billowing into the thermosphere."
  stratovent_world_modifier_tourism: "Untouched Stratospheric Vents"
- stratovent_world_modifier_tourism_desc: "These magnificient stratospheric vents have been left untouched to allow Tiyanki to graze on the gases."
+ stratovent_world_modifier_tourism_desc: "These magnificent stratospheric vents have been left untouched to allow Tiyanki to graze on the gases."
  stratovent_world_modifier_refining: "Stratospheric Vent Refineries"
  stratovent_world_modifier_refining_desc: "The emissions from these massive stratospheric vents have been redirected and refined into precious Exotic Gases."
  stratovent_world_modifier_tourism_boost: "Stratospherics Vent Platforms"
- stratovent_world_modifier_tourism_boost_desc: "Stratospheric vent tourism on a higher level with dedicated viewing platforms to observe the feeding behaviour of the mighty Tiyanki."
+ stratovent_world_modifier_tourism_boost_desc: "Stratospheric vent tourism on a higher level with dedicated viewing platforms to observe the feeding behavior of the mighty Tiyanki."
  stratovent_world_modifier_refining_upg: "Expanded Stratospheric Vents"
  stratovent_world_modifier_refining_upg_desc: "The successful detonation of new pathways for underground gases has led to increased production."
  stratovent_world_modifier_refining_minerals: "Collapsed Stratospheric Vents"
